# file-bazaar

./: AGENTS.md  README.md  main.py  pyproject.toml
src/api/routers/: files.py
src/core/: files.py  settings.py
src/i18n/: __init__.py  extensions.py  test_i18n.py
src/i18n/locales/: en.json  ja.json
src/schemas/: files.py
src/ui/: routes.py
src/ui/templates/: base.html  index.html
