[project]
name = "file-bazaar"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.4.2",
    "fastapi==0.139.2",
    "jinja2==3.1.6",
    "pydantic-settings==2.14.2",
    "python-multipart==0.0.32",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
